feat: People pagination v2
Implemented as part of 2abd2a16-d49c-4fb5-ab32-ca036cfa1010
